$indexStats doesn't include the "shard" field when run on unsharded collections

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.19, 5.0.15, 6.3.0-rc0, 6.0.5
    • Affects Version/s: 4.4.18, 5.0.14, 6.0.4, 6.2.0-rc6
    • Component/s: None
    • None
    • Sharding NYC
    • Minor Change
    • ALL
    • v6.2, v6.0, v5.0, v4.4
    • 151
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      $indexStats includes the "shard" field on version 4.2 when run on an unsharded collection (correct behavior). However on version 4.4 onwards the "shard" field is missing for unsharded collections even though it should be present.

      See comments for more info.

            Assignee:
            Tyler Brock
            Reporter:
            Vishnu Kaushik
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: