SERVER-72620 ensure shard added to $indexStats for unsharded collections